--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,7 +87,7 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:$datastore_ver"
 
     //Navigation
-    def navigation_ver = "2.5.0-beta01"
+    def navigation_ver = "2.5.0-rc01"
     implementation "androidx.navigation:navigation-compose:$navigation_ver"
 
     //Coroutines
@@ -106,6 +106,7 @@ dependencies {
 
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
     //Constraint compose
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
