--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
 
     //Testing
@@ -79,7 +79,7 @@ dependencies {
     implementation "androidx.compose.material:material-icons-core:$icons_ver"
 
     //Coil
-    def coil_ver = "2.0.0-rc03"
+    def coil_ver = '2.1.0'
     implementation "io.coil-kt:coil-compose:$coil_ver"
 
     //Datastore
@@ -91,7 +91,7 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:$navigation_ver"
 
     //Coroutines
-    def coroutines_ver = "1.6.1"
+    def coroutines_ver = '1.6.2'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_ver"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_ver"
 
@@ -109,6 +109,8 @@ dependencies {
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
     //Constraint compose
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
+    //Flow layout
+    implementation "com.google.accompanist:accompanist-flowlayout:0.24.10-beta"
 }
