--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.crownedjester.soft.waterdrinkremainder'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.crownedjester.soft.waterdrinkremainder"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -29,8 +29,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -39,7 +39,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.1.1'
+        kotlinCompilerExtensionVersion '1.3.0'
     }
     packagingOptions {
         resources {
@@ -51,7 +51,7 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
 
     //Testing
     testImplementation 'junit:junit:4.13.2'
@@ -59,10 +59,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //Compose
-    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.activity:activity-compose:1.5.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.1.1'
+    implementation 'androidx.compose.material:material:1.2.1'
 
     //Compose testing
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
@@ -70,41 +70,32 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
     //Compose animation
-    def animation_ver = "1.1.1"
-    implementation "androidx.compose.animation:animation-core:$animation_ver"
+    implementation "androidx.compose.animation:animation-core:$compose_ui_version"
 
     //Compose icons
-    def icons_ver = "1.1.1"
-    implementation "androidx.compose.material:material-icons-extended:$icons_ver"
-    implementation "androidx.compose.material:material-icons-core:$icons_ver"
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+    implementation "androidx.compose.material:material-icons-core:$compose_ui_version"
 
     //Coil
-    def coil_ver = '2.1.0'
     implementation "io.coil-kt:coil-compose:$coil_ver"
 
     //Datastore
-    def datastore_ver = "1.0.0"
     implementation "androidx.datastore:datastore-preferences:$datastore_ver"
 
     //Navigation
-    def navigation_ver = "2.5.0-rc01"
     implementation "androidx.navigation:navigation-compose:$navigation_ver"
 
     //Coroutines
-    def coroutines_ver = '1.6.2'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_ver"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_ver"
 
     //Background work
-    def work_ver = "2.7.1"
     implementation "androidx.work:work-runtime-ktx:$work_ver"
 
     // Dagger Hilt
-    def hilt_vers = '2.40.5'
-    implementation "com.google.dagger:hilt-android:$hilt_vers"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_vers"
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
@@ -112,5 +103,13 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
     //Flow layout
-    implementation "com.google.accompanist:accompanist-flowlayout:0.24.10-beta"
+    implementation 'com.google.accompanist:accompanist-flowlayout:0.26.2-beta'
+
+    //Room
+    implementation "androidx.room:room-runtime:$room_ver"
+    kapt "androidx.room:room-compiler:$room_ver"
+
+    //Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_ver"
+
 }
