--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,21 @@
 buildscript {
     ext {
-        compose_ui_version = '1.2.1'
+        compose_ui_version = '1.5.0-alpha02'
         hilt_version = '2.43.2'
         datastore_ver = "1.0.0"
-        coil_ver = '2.2.0'
-        navigation_ver = "2.5.1"
+        coil_ver = '2.2.2'
+        navigation_ver = "2.5.3"
         coroutines_ver = '1.6.4'
-        work_ver = "2.7.1"
-        room_ver = "2.4.3"
+        work_ver = "2.8.1"
+        room_ver = "2.5.1"
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.43.2"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.4.0-alpha10' apply false
-    id 'com.android.library' version '7.4.0-alpha10' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'com.android.application' version '7.4.2' apply false
+    id 'com.android.library' version '7.4.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'com.google.devtools.ksp' version '1.8.10-1.0.9' apply false
 }
